[FIX] Truncate overlong text w/ellipsis (#206)
* Fix download zip i8n message

* Add ellipsis to last breadcrumb item to truncate long text

* Ellipsis all the things

* Cleanup

* Revert margin fix

* Cleanup

--- a/packages/frontend/assets/scss/_helpers.scss
+++ b/packages/frontend/assets/scss/_helpers.scss
@@ -5,3 +5,10 @@
 @function rem($pxValue) {
   @return #{stripUnit($pxValue) / stripUnit($font-size-root)}rem;
 }
+
+@mixin ellipsis() {
+  flex: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
